<resources>
    <string name="app_name">MenuProject</string>
    <string name="action_settings">Settings</string>
    <string name="SMS">SMS</string>
    <string name="PHONE">PHONE</string>
    <string name="WEB">WEB</string>
    <string name="MAP">MAP</string>
    <string name="SHARE">SHARE</string>
    <string name="NEW">NEW ACTIVITY</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="help">Help</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_help">HelpActivity</string>
</resources>
